# neriX

./: .gitignore
daq/TDC/TDC Software/libxdio-0.3.2/src/: Makefile  Makefile.am  Makefile.in  common.h  internal.h  libxdio.h  libxdio.la  stamp-h2  test_memory_leaks  test_memory_leaks.c  test_read_speed  test_write_speed  test_write_speed.c  xdio.h  xdio_chunk.c  xdio_chunk.lo  xdio_chunk_zle.c  xdio_chunk_zle.lo  xdio_event.c  xdio_event.lo  xdio_file.lo  xdio_utils.c  xdio_utils.lo  xedcompress  xedcompress.c  xedinfo  xedinfo.c  xedselect  xedselect.c
daq/TDC/TDC Software/libxdio-0.3.2/src/.deps/: test_memory_leaks.Po  test_read_speed.Po  test_write_speed.Po  xdio_chunk.Plo  xdio_chunk_raw.Plo  xdio_chunk_zle.Plo  xdio_event.Plo  xdio_file.Plo  xdio_utils.Plo  xedcompress.Po  xedinfo.Po  xedselect.Po
daq/TDC/TDC Software/libxdio-0.3.2/src/.libs/: libxdio.dylib  libxdio.la  test_memory_leaks  test_read_speed  test_write_speed  xedcompress  xedinfo  xedselect
daq/TDC/TDC Software/nscldaq-10.2-108/: ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.ac  dotests  introduction.xml  nscldaq.in
daq/TDC/TDC Software/nscldaq-10.2-108/base/: Makefile.am  Makefile.in
daq/TDC/TDC Software/nscldaq-10.2-108/base/CopyrightTools/: CopyrightNotice.cpp  CopyrightNotice.h  Makefile.am  Makefile.in  copyrightnotice.xml  test.cpp
daq/TDC/TDC Software/nscldaq-10.2-108/base/cvt/: Makefile.am  Makefile.in  cvtdoc.xml  daqcvt.c  daqcvt.h
daq/TDC/TDC Software/nscldaq-10.2-108/base/dataflow/: BlockingTests.cpp  CRemoteAccess.cpp  CRemoteAccess.h  CRingBuffer.cpp  CRingBuffer.h  CRingCommand.cpp  CRingCommand.h  CRingMaster.cpp  CRingMaster.h  DifferenceTests.cpp  InfoTests.cpp  Makefile.am  Makefile.in  ManageTest.cpp  RemoteTests.cpp  RingMaster.tcl  StaticTests.cpp  TestRunner.cpp  TransferTests.cpp  WhilePredTest.cpp  consumer.cpp  crmastertests.cpp  producer.cpp  ringPackage.cpp  ringbuffer.tcl  ringbuffer.xml  ringbufint.h  ringlib.xml  ringmaster.xml  ringpipes.xml  ringprimitives.xml  ringtostdout.cpp  ringtostdoutsw.ggo  stdintoring.cpp  stdintoringsw.ggo  tclring.xml  testcommon.cpp  testcommon.h
daq/TDC/TDC Software/nscldaq-10.2-108/base/headers/: Makefile.am  Makefile.in  Refptr.h  buffer.h  buftypes.h
daq/TDC/TDC Software/nscldaq-10.2-108/base/os/: Makefile.am  Makefile.in  attachTests.cpp  createTests.cpp  daqshm.cpp  daqshm.h  detachTests.cpp  os.cpp  os.h  removeTests.cpp  shm.xml
daq/TDC/TDC Software/nscldaq-10.2-108/base/security/: AccessListCheck.cpp  AccessListCheck.h  Authenticator.h  FdInteractor.cpp  FdInteractor.h  HostListCheck.cpp  HostListCheck.h  IOInteractor.cpp  IOInteractor.h  Interactor.cpp  Interactor.h  Makefile.am  Makefile.in  PasswordCheck.cpp  PasswordCheck.h  StringInteractor.cpp  StringInteractor.h  TclAccessListCheck.cpp  TclAccessListCheck.h  UnixUserCheck.cpp  UnixUserCheck.h  security.xml
daq/TDC/TDC Software/nscldaq-10.2-108/base/tclwidgets/: Makefile.am  Makefile.in  ReDistribNotes  mwutil.tcl  notebook.tcl  tablelist.tcl  tablelistSortByColumn.tcl  tablelistWidget.tcl
daq/TDC/TDC Software/nscldaq-10.2-108/base/tcpip/: CSocket.cpp  CSocket.h  CTCPBadSocketState.cpp  CTCPBadSocketState.h  CTCPConnectionFailed.h  CTCPConnectionLost.cpp  CTCPConnectionLost.h  CTCPNoSuchHost.cpp  CTCPNoSuchHost.h  (+3 more)
daq/TDC/TDC Software/nscldaq-10.2-108/daq/: Makefile.am  Makefile.in
daq/TDC/TDC Software/nscldaq-10.2-108/docbuild/: Makefile.am  Makefile.in  alltsts.tcl  docbuilder.tcl  fragmenttest.tcl  mansectests.tcl  metadirtest.tcl  tutorial.xml  walkdirtest.tcl
daq/TDC/TDC Software/nscldaq-10.2-108/docconfig/: Makefile.am  Makefile.in  config
daq/TDC/TDC Software/nscldaq-10.2-108/epics/: Makefile.am  Makefile.in
daq/TDC/TDC Software/nscldaq-10.2-108/libtcl/: ChangeLog  Makefile  Makefile.in  aclocal.m4  config.h  config.status  configure  configure.ac  libtool  testBuildTarball
daq/TDC/TDC Software/nscldaq-10.2-108/m4/: epics.m4  libusb.m4
daq/TDC/TDC Software/nscldaq-10.2-108/sbs/: Makefile.am  Makefile.in
daq/TDC/TDC Software/nscldaq-10.2-108/servers/: Makefile.am  Makefile.in
daq/TDC/TDC Software/nscldaq-10.2-108/usb/: Makefile.am  Makefile.in
daq/TDC/TDC Software/nscldaq-10.2-108/utilities/: Makefile.am  Makefile.in  StringsToIntegers.cpp  StringsToIntegers.h
daq/TDC/TDC Software/xerawdp-0.3.3_alpha04_test_tdc_old/: Makefile  config.h.in  configure.ac  nerix-hpge-run_09.xml  nerix-led-spe.xml
daq/TDC/TDC Software/xerawdp-0.3.3_alpha04_test_tdc_old/autom4te.cache/: traces.0
daq/TDC/TDC Software/xerawdp-0.3.3_alpha04_test_tdc_old/models/: nerix-posrec-run_00.net
daq/TDC/TDC Software/xerawdp-0.3.3_alpha04_test_tdc_old/scripts/: Makefile.in
daq/TDC/TDC Software/xerawdp-0.3.3_alpha04_test_tdc_old/src/: AnalysisManager.cpp  AnalysisManager.h  Makefile  RawDataController.cpp  RawDataController.h  RawDataProcessor.cpp  VectorDict.cpp
daq/libxdio-0.3.2/: Makefile  README  aclocal.m4  config.status  configure  configure.ac  libtool
daq/libxdio-0.3.2/old_usr_local_lib/: libchi2-1.so.1  libxdio.la  libxdio.so.0.0.0
daq/libxdio-0.3.2/old_usr_local_lib/pkgconfig/: libchi2-1.pc
daq/libxdio-0.3.2/src/: Makefile  libxdio.h.in  libxdio.la  test_memory_leaks  test_read_speed  test_read_speed.c  test_write_speed  xdio_chunk_raw.c  xdio_chunk_raw.lo  xdio_file.c  xedcompress  xedinfo  xedselect
daq/libxdio-0.3.2/src/.deps/: test_memory_leaks.Po  test_read_speed.Po  test_write_speed.Po  xdio_chunk.Plo  xdio_chunk_raw.Plo  xdio_chunk_zle.Plo  xdio_event.Plo  xdio_file.Plo  xdio_utils.Plo  xedcompress.Po  xedinfo.Po  xedselect.Po
daq/libxdio-0.3.2/src/.libs/: libxdio.so.0.0.0  test_memory_leaks  test_read_speed  test_write_speed  xedcompress  xedinfo  xedselect
daq/old_daq_dp_systems/xerawdp-0.3.3_alpha04_newer_NN/src/: AnalysisManager.cpp.v0  AnalysisManager.old  EventData.h  Makefile.am  PeakFinder.h  PositionReconstruction.cpp  PositionReconstruction.h  SignalFitter.h  XmlConfig.h
daq/old_daq_dp_systems/xerawdp-0.3.3_alpha04_newer_NN/src/.deps/: xerawdp-XmlConfig.Po  xerawdp-xerawdp.Po
(+5156 files in other folders)
